<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vehicle_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="40dp">

        <TextView
            android:text="@string/candidates_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tvNameList"
            android:textAlignment="center" />

    </TableRow>


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="400dp">

        <ListView
            android:id="@+id/lvCandidates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/vote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/button" />

        <Button
            android:text="@string/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/button1"
            android:onClick="Logout" />

    </TableRow>

</LinearLayout>
